--- a/src/Student.css
+++ b/src/Student.css
@@ -1,3 +1,33 @@
+.student {
+  display: flex;
+  border-bottom: solid 1px #f6f6f6;
+}
+
+.student-img {
+  margin: 2rem;
+  padding: 0;
+  border: solid 1px #dcdcdc;
+  border-radius: 5rem;
+  display: inline-block;
+  height: 9rem;
+  width: 9rem;
+}
+
+.student-info {
+  display: inline-block;
+  margin: 0rem 0;
+}
+
+.student-details {
+  margin: 1rem 3rem;
+}
+
+.student-details > p {
+  margin: 0.5rem;
+}
+
 .student-name {
+  margin: 1rem;
+  font-size: 3.2rem;
   text-transform: uppercase;
 }
