Add styled search bar component to top of app for later filter function

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
   margin: 6rem auto;
-  padding: 0;
+  padding: 1rem;
   border: 1px solid #dcdcdc;
   border-radius: 1rem;
   box-shadow: 3px 3px 2px #cecece;
