--- a/src/Student.css
+++ b/src/Student.css
@@ -31,3 +31,13 @@
   font-size: 3.2rem;
   text-transform: uppercase;
 }
+
+.grades {
+  margin: 1rem 3rem;
+  padding: 0;
+  list-style-type: none;
+}
+
+.test {
+  margin: 0 0.5rem;
+}
