Add styled tag input and refactor text input css for global style

--- a/src/Student.css
+++ b/src/Student.css
@@ -43,6 +43,16 @@
   padding: 0;
 }
 
+.tag-form {
+  margin: 1rem 3rem;
+  max-width: 50%;
+}
+
+.tag-text {
+  margin: 0.5rem;
+  padding-left: 0 !important;
+}
+
 .grades-button {
   margin: 1rem;
   margin-left: auto;
