--- a/src/Search.css
+++ b/src/Search.css
@@ -1,16 +1,3 @@
 .search-bar {
-  box-sizing: border-box;
-  padding: 1rem;
-  border: none;
-  border-bottom: 1px solid #e8e8e8;
-  /* height: 1rem; */
-  width: 100%;
-  font-size: 1.6rem;
-  font-weight: 100;
-}
-
-.search-bar:focus {
-  outline: none;
-  border: none;
-  border-bottom: 2px solid #747474;
+  font-size: 1.6rem !important;
 }
