--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type="text"] {
+  box-sizing: border-box;
+  padding: 1rem;
+  border: none;
+  border-bottom: 1px solid #e8e8e8;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #747474;
+}
