--- a/src/Tags.css
+++ b/src/Tags.css
@@ -5,7 +5,7 @@
 
 .tag {
   margin: 0.2rem;
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   border-radius: 0.3rem;
   background: #e0e0e0;
   color: black;
